Onload set values to select inputs based on default time value.

--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@ Aenean hendrerit placerat arcu, eu eleifend erat vulputate nec. Nulla urna erat,
 Phasellus id arcu efficitur, ultrices lectus ut, aliquet nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean eros urna, dignissim eget efficitur et, placerat at velit. Maecenas arcu massa, consectetur eget elit convallis, dignissim eleifend arcu. Sed vitae magna justo. Duis volutpat nunc est, et hendrerit magna ullamcorper ut. Sed et viverra mauris, sit amet tincidunt ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In hac habitasse platea dictumst. Pellentesque faucibus justo in lacus molestie faucibus. Donec congue sagittis erat, eu sagittis augue consequat eget. Sed eget risus ac eros dictum cursus. Aliquam eu neque aliquam, dapibus purus ut, faucibus elit. Morbi vehicula facilisis nibh quis rhoncus. Aliquam efficitur justo tortor, vel vulputate magna cursus in. Etiam dapibus nisi a nunc molestie gravida.
 
 Integer mattis lacinia velit et molestie. Maecenas tempor id neque in fermentum. Morbi varius lorem aliquam lobortis vehicula. Nunc auctor purus eu est interdum, non viverra elit sodales. Donec sit amet erat quis ex maximus facilisis. Maecenas elementum vel odio nec ultricies. Cras dictum ante at est posuere, non pharetra justo feugiat.
-<input type='text' id='inp1'/>
+<input type='text' id='inp1' value="04:00:00" />
 <input type='text' id='inp2'/>
 
 	</body>
 	<script>
-		
     $('#inp1').annytimepicker();
     $('#inp2').annytimepicker();
-
-
 	</script>
 </html>
